[package]
name = "t-rex"
version = "0.14.1"
description = "t-rex vector tile server"
repository = "https://github.com/t-rex-tileserver/t-rex"
readme = "README.md"
license = "MIT"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[[bin]]
name = "t_rex"
path = "src/main.rs"
doctest = false

[dependencies]
tile-grid = { path = "tile-grid" }
t-rex-core = { path = "t-rex-core" }
t-rex-gdal = { path = "t-rex-gdal", optional = true }
t-rex-service = { path = "t-rex-service" }
t-rex-webserver = { path = "t-rex-webserver" }
clap = "2.33"
dotenv = "0.15"
log = "0.4"
env_logger = "0.8"
time = "0.1"

[features]
default = ["with-gdal"]
with-gdal = ["t-rex-gdal", "t-rex-service/with-gdal"]

[workspace]

[package.metadata.deb]
name = "t-rex"
maintainer = "Pirmin Kalberer <pi_deb@sourcepole.ch>"
copyright = "2021, Pirmin Kalberer <pi_deb@sourcepole.ch>"
license-file = ["LICENSE", "4"]
extended-description = """\
t-rex is a vector tile server specialized \
on publishing MVT tiles from your own data."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/t_rex", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/t-rex/README", "644"],
]
depends = "libssl1.1, libgdal26"
revision = "1~focal"

[package.metadata.deb.variants.focal]
# default: is Ubuntu Focal Fossa 20.04 (LTS) 

[package.metadata.deb.variants.buster]
depends = "libssl1.1, libgdal20"
revision = "1~buster"

[package.metadata.deb.variants.bullseye]
depends = "libssl1.1, libgdal28"
revision = "1~bullseye"

[package.metadata.rpm]
package = "t-rex"
config = "packaging/rpm/t-rex.spec"

[package.metadata.rpm.cargo]
buildflags = ["--release", "--no-default-features"]

[package.metadata.rpm.targets]
t_rex = { path = "/usr/bin/t_rex" }
