[package]
name = "t-rex-core"
version = "0.9.9"
description = "vector tile server"
repository = "https://github.com/t-rex-tileserver/t-rex"
readme = "../README.md"
license = "MIT"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
# build.rs requires protoc in $PATH
# build = "build.rs"
build = false
edition = "2018"
workspace = ".."

[lib]
doctest = false

[dependencies]
toml = "0.4"
fallible-iterator = "0.1"
r2d2 = "0.8"
r2d2_postgres = "0.14"
regex = "1"
postgis = "0.6"
postgres = "0.15"
postgres-native-tls = "0.1"
protobuf = "2.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
streaming-stats = "0.2.0"
log = "0.4"
flate2 = "1.0"
tera = "0.11"

[dependencies.tile-grid]
path = "../tile-grid"

[build-dependencies]
protoc-rust = "2.17"
