[package]
name = "t-rex-service"
version = "0.9.9"
description = "vector tile server"
repository = "https://github.com/t-rex-tileserver/t-rex"
readme = "../README.md"
license = "MIT"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
workspace = ".."

[lib]
doctest = false

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
percent-encoding = "1.0"
elementtree = "0.5"
log = "0.4"
clap = "2.31"
pbr = "1.0"

[dependencies.t-rex-core]
path = "../t-rex-core"

[dependencies.t-rex-gdal]
path = "../t-rex-gdal"
optional = true

[features]
default = ["with-gdal"]
with-gdal = ["t-rex-gdal"]
