[package]
name = "t-rex-webserver"
version = "0.9.9"
description = "vector tile server"
repository = "https://github.com/t-rex-tileserver/t-rex"
readme = "../README.md"
license = "MIT"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
build = "build.rs"
edition = "2018"
workspace = ".."

[lib]
doctest = false

[dependencies]
actix-web = "2.0.0"
actix-cors = "0.1.0"
actix-files = "0.1.4"
actix-rt = "0.2.5"
futures = "0.1"
clap = "2.31"
log = "0.4"
num_cpus = "1.11"
open = "1.3"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.tile-grid]
path = "../tile-grid"

[dependencies.t-rex-core]
path = "../t-rex-core"

[dependencies.t-rex-service]
path = "../t-rex-service"
