[package]
name = "t-rex-webserver"
version = "0.9.9"
description = "vector tile server"
repository = "https://github.com/t-rex-tileserver/t-rex"
readme = "../README.md"
license = "MIT"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
build = "build.rs"
edition = "2018"
workspace = ".."

[lib]
doctest = false

[dependencies]
actix-web = "4.0.0-beta.4"
actix-cors = { git = "https://github.com/andy128k/actix-extras.git", branch = "update-dependencies" }
actix-files = "0.6.0-beta.3"
futures = "0.3"
clap = "2.33"
log = "0.4"
num_cpus = "1.13"
open = "1.4"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.tile-grid]
path = "../tile-grid"

[dependencies.t-rex-core]
path = "../t-rex-core"

[dependencies.t-rex-service]
path = "../t-rex-service"
